--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,8 @@ Models/
 */**/**/**/*.pyc
 */**/**/**/**/*.pyc
 */**/__pycache__
+Deep3DFaceReconstruction/shape_predictor_68_face_landmarks.dat
+Deep3DFaceReconstruction/BFM/01_MorphableModel.mat
+Deep3DFaceReconstruction/BFM/BFM_model_front.mat
+Deep3DFaceReconstruction/BFM/Exp_Pca.bin
+Deep3DFaceReconstruction/network/FaceReconModel.pb
